@@ -36,7 +36,7 @@ InModuleScope Neo4j-Management {
     Mock Get-ItemProperty { $null } -ParameterFilter {
       $Path -like 'Registry::*\JavaSoft\Java Runtime Environment*'
     }
-    Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava8' = $true } }
+    Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava11' = $true } }
 
     # Java Detection Tests
     Context "Valid Java install in JAVA_HOME environment variable" {
@@ -52,7 +52,7 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Legacy Java install in JAVA_HOME environment variable" {
-      Mock Get-JavaVersion -Verifiable { @{ 'isValid' = $false; 'isJava8' = $false } }
+      Mock Get-JavaVersion -Verifiable { @{ 'isValid' = $false; 'isJava11' = $false } }
 
       It "should throw if java is not supported" {
         { Get-Java -ErrorAction Stop } | Should Throw
@@ -165,8 +165,8 @@ InModuleScope Neo4j-Management {
     }
 
     # ForServer tests
-    Context "Server Invoke - Community v3.0" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community'
+    Context "Server Invoke - Community v4.0" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
@@ -177,7 +177,7 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Server Invoke - Should set heap size" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
          -NeoConfSettings 'dbms.memory.heap.initial_size=123k','dbms.memory.heap.max_size=234g'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
@@ -193,7 +193,7 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Server Invoke - Should default heap size unit to megabytes" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
          -NeoConfSettings 'dbms.memory.heap.initial_size=123','dbms.memory.heap.max_size=234'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
@@ -209,78 +209,9 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Server Invoke - Enable Default GC Logs" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-         -NeoConfSettings 'dbms.logs.gc.enabled=true'
-
-      $result = Get-Java -ForServer -Neo4jServer $serverObject
-      $resultArgs = ($result.args -join ' ')
-
-      It "should set GCLogfile" {
-        $resultArgs | Should Match ([regex]::Escape(' -Xloggc:'))
-      }
-
-      It "should set GCLogfile under logs" {
-        $resultArgs | Should Match ([regex]::Escape(" -Xloggc:`"$($serverObject.LogDir)"))
-      }
-
-      It "should set GCLogFileSize" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:GCLogFileSize='))
-      }
-
-      It "should set NumberOfGCLogFiles" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:NumberOfGCLogFiles='))
-      }
-
-      It "should set PrintGCDetails" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCDetails'))
-      }
-
-      It "should set PrintGCDateStamps" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCDateStamps'))
-      }
-
-      It "should set PrintGCApplicationStoppedTime" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCApplicationStoppedTime'))
-      }
-
-      It "should set PrintPromotionFailure" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintPromotionFailure'))
-      }
-
-      It "should set PrintTenuringDistribution" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintTenuringDistribution'))
-      }
-    }
-
-    Context "Server Invoke - Enable Specific GC Logs" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-         -NeoConfSettings 'dbms.logs.gc.enabled=true','dbms.logs.gc.options=key1=value1 key2=value2'
-
-      $result = Get-Java -ForServer -Neo4jServer $serverObject
-      $resultArgs = ($result.args -join ' ')
-
-      It "should set GCLogfile" {
-        $resultArgs | Should Match ([regex]::Escape(' -Xloggc:'))
-      }
-
-      It "should set GCLogFileSize" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:GCLogFileSize='))
-      }
-
-      It "should set NumberOfGCLogFiles" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:NumberOfGCLogFiles='))
-      }
-
-      It "should set specific options" {
-        $resultArgs | Should Match ([regex]::Escape(' key1=value1'))
-        $resultArgs | Should Match ([regex]::Escape(' key2=value2'))
-      }
-    }
-
-    Context "Server Invoke - Enable Post Java 8 Default GC Logs" {
-      Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava8' = $false } }
+      Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava11' = $false } }
       
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
          -NeoConfSettings 'dbms.logs.gc.enabled=true'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
@@ -303,10 +234,10 @@ InModuleScope Neo4j-Management {
       }
     }
 
-    Context "Server Invoke - Enable Post Java 8 Specific GC Logs" {
-      Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava8' = $false } }
+    Context "Server Invoke - Enable Specific GC Logs" {
+      Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava11' = $false } }
 
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
          -NeoConfSettings 'dbms.logs.gc.enabled=true','dbms.logs.gc.options=key1=value1 key2=value2'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
@@ -384,7 +315,7 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Server Invoke - Should handle paths with spaces" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
          -RootDir 'TestDrive:\Neo4j Home' `
          -NeoConfSettings 'dbms.logs.gc.enabled=true'
 
@@ -398,7 +329,8 @@ InModuleScope Neo4j-Management {
         $argList -contains "--home-dir=`"TestDrive:\Neo4j Home`"" | Should Be True
       }
       It "should have literal quotes around gclog path" {
-        $argList -contains "-Xloggc:`"$($serverObject.LogDir)/gc.log`"" | Should Be True
+        $argList -contains
+        "-Xlog:gc*,safepoint,age*=trace:file=\""TestDrive:\Neo4j Home\logs/gc.log\""::filecount=5,filesize=20m"| Should Be True
       }
     }
   }
